# task2_fastApi

./: main.py  pyproject.toml
